# Weather-MCP-Server

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  activate.bat  activate.ps1  pyproject.toml  requirements-dev.txt  requirements.txt
src/eu_weather_mcp/: __init__.py  __main__.py  config.py  errors.py  location.py  mcp_server.py  models.py  openmeteo.py  service.py  streamlit_app.py
tests/: test_location.py  test_openmeteo.py
