[project]
name = "eu-weather-mcp-server"
version = "0.1.0"
description = "EU weather MCP server backed by Open-Meteo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0,<1.0.0",
    "streamlit>=1.45.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "ruff>=0.6.0,<1.0.0",
]

[project.scripts]
eu-weather-mcp = "eu_weather_mcp.mcp_server:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eu_weather_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
    "/Dockerfile",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
